--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                     </li>
                     <li id = "personalityQuiz" class = 'col-sm-3'>
                       <div id ="personalityTop">
-                          <img src = "paPerEmoji.png" style = "height: 40px;">
+                          <img src = "paperEmoji.png" style = "height: 40px;">
                           &nbsp;
                           <p class = "highlightTitle">PERSONALITY QUIZ</p>
                           &nbsp;
